--- a/landing-page/main.css
+++ b/landing-page/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -343,6 +342,13 @@ html {
   scroll-behavior: smooth !important;
 }
 
+body {
+  font-family: "Open Sans", Sans-Serif;
+  font-size: 1.1rem;
+  color: #0f2460;
+  background-color: #fffefe;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -352,213 +358,268 @@ a:visited {
   color: inherit;
 }
 
-body {
-  font-family: "Open Sans", Sans-Serif;
-  font-size: 1rem;
-  color: #0f2460;
-  background: linear-gradient(125deg, #ecfcff 0%, #ecfcff 40%, #b2fcff calc(40% + 1px), #b2fcff 60%, #5edfff calc(60% + 1px), #5edfff 72%, #3e64ff calc(72% + 1px), #0f2460 100%);
-  background-attachment: fixed;
-  max-width: 1920px;
-}
-
-#navbar {
+header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  background-color: #f50053;
+  color: white;
+  padding: 0 24px;
   position: fixed;
-  min-width: 250px;
-  max-width: 300px;
-  background: #fffefe;
-  min-height: 100%;
-  border-right: 2px solid #920031;
+  width: 100%;
+  top: 0;
   z-index: 1;
-}
-
-.navbar-top {
-  display: flex;
-  padding: 24px 8px 24px 16px;
-  flex-direction: column;
-}
-.navbar-top .logo {
-  font-family: "Ubuntu", Sans-Serif;
-  font-size: 2rem;
-  font-weight: bold;
-  margin: 0 auto;
-}
-.navbar-top .logo :hover {
-  color: #f50053;
-}
-.navbar-top header {
-  font-size: 1.2rem;
-  text-align: center;
-  font-weight: bold;
-  margin-top: 16px;
-}
-
-input,
-label {
-  display: none;
-}
-
-.nav-stack {
-  display: flex;
-  flex-direction: column;
-  margin: 16px 0;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
-.nav-stack a {
-  padding: 8px 16px;
-  border-top: 2px solid #f50053;
+header .logo-img {
+  height: 64px;
+  margin: auto 0;
 }
-.nav-stack a:hover {
-  background-color: #f50053;
-  color: #fffefe;
-}
-.nav-stack a:focus {
-  background-color: #920031;
-  color: #fffefe;
-  border-top: 2px solid #920031;
-}
-.nav-stack .slider-selector:hover + .slider {
+
+.logo-link {
   display: flex;
-  line-height: 24px;
-}
-.nav-stack .slider {
-  display: none;
-}
-.nav-stack .slider li {
-  list-style: none;
-}
-.nav-stack .slider li:before {
-  content: "•";
-  color: #f50053;
+  font-size: 1.5rem;
+  -moz-column-gap: 16px;
+       column-gap: 16px;
   font-weight: bold;
-  display: inline-block;
-  width: 1em;
-  margin-left: -1em;
 }
 
-.technical_documentation {
-  position: absolute;
-  margin-left: 300px;
-  max-width: 77%;
-  padding: 48px;
+nav {
+  display: flex;
+  -moz-column-gap: 32px;
+       column-gap: 32px;
+  font-size: 1.4rem;
+  margin: auto 48px;
+}
+nav :hover {
+  color: #c9c9c9;
+}
+nav :focus {
+  color: #fffefe;
+}
+
+.hero-bg {
+  background: rgb(245, 0, 83);
+  background: linear-gradient(180deg, rgb(245, 0, 83) 70%, rgba(255, 254, 254, 0) 100%);
+}
+
+.hero {
+  max-width: 1200px;
+  display: flex;
+  margin-top: 103px;
+  margin: 103px auto 0 auto;
+  padding: 0 160px 0 160px;
+  -moz-column-gap: 56px;
+       column-gap: 56px;
+}
+
+.hero-left {
+  color: #fffefe;
+  margin: auto 0;
+  line-height: 32px;
   text-align: justify;
-  line-height: 1.5;
 }
 
-section {
-  background-color: #fffefe;
-  padding: 32px 48px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+h1,
+h2 {
+  font-family: "Ubuntu", Sans-Serif;
 }
-section .description {
-  color: #f50053;
-  font-size: 2rem;
+
+h1 {
   font-weight: bold;
-  margin: 32px 0;
-  text-align: left;
-}
-section .description:first-child {
-  margin: 0 0 32px;
-}
-section a {
-  color: #920031;
-}
-section a:hover {
-  color: #f50053;
+  font-size: 3rem;
 }
 
-section + section {
-  margin-top: 32px;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-img {
-  display: block;
+#hero-img {
   width: 600px;
   height: auto;
-  padding: 32px 0;
-  margin: auto;
 }
 
-code {
-  display: none;
+.video-desc {
+  display: flex;
+  flex-direction: row-reverse;
+  max-width: 1200px;
+  margin: auto auto;
+  line-height: 32px;
+  -moz-column-gap: 56px;
+       column-gap: 56px;
+  padding: 256px 0;
 }
 
-@media (max-width: 1100px) {
-  img {
-    width: 400px;
+h2 {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.video-description {
+  text-align: justify;
+}
+
+iframe {
+  margin: auto 0;
+}
+
+.numbers {
+  display: flex;
+  background-color: green;
+  padding: 32px 160px 32px 160px;
+  justify-content: space-between;
+  margin: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  -webkit-animation: color-change-2x 10s linear infinite alternate both;
+          animation: color-change-2x 10s linear infinite alternate both;
+}
+
+@-webkit-keyframes color-change-2x {
+  0% {
+    background: #f50053;
+  }
+  100% {
+    background: #2760fd;
   }
 }
-@media (max-width: 900px) {
-  #main-doc {
-    display: flex;
-    flex-direction: column;
+
+@keyframes color-change-2x {
+  0% {
+    background: #f50053;
   }
-  #navbar {
-    display: flex;
-    flex-direction: column;
-    border-right: none;
-    min-width: 100%;
-    min-height: 0%;
+  100% {
+    background: #2760fd;
   }
-  #navbar #menu-box {
-    display: none;
-  }
-  #navbar .menu {
-    display: inline-block;
-    border: 1px solid #f50053;
-    padding: 8px;
-    background-color: #f50053;
-    color: #fffefe;
-    font-weight: bold;
-    text-align: center;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    transition: all 250ms ease-out;
-  }
-  #navbar .menu:hover {
-    background-color: #920031;
-    border: 1px solid #920031;
-  }
-  #navbar .nav-stack {
-    text-align: left;
-    margin: 0;
-    max-height: 0px;
-    overflow: hidden;
-    border-top: none;
-    border-bottom: 1px solid #f50053;
-  }
-  #navbar input:checked ~ .nav-stack {
-    max-height: 100%;
-    background-color: rgba(230, 230, 230, 0.3215686275);
-  }
-  .navbar-top {
-    flex-direction: row;
-    padding: 16px 16px;
-    border-bottom: 1px solid #f50053;
-  }
-  .navbar-top .logo {
-    font-size: 1.3rem;
-    margin: auto 0;
-  }
-  .navbar-top header {
-    font-size: 1.1rem;
-    padding-left: 16px;
-    margin: auto 0;
-  }
-  .technical_documentation {
-    position: relative;
-    margin: 128px 0px 32px 0px;
-    max-width: 100%;
-    padding: 0;
-  }
+}
+.number {
+  display: flex;
+  flex-direction: column;
+  color: #fffefe;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+  font-family: "Ubuntu", Sans-Serif;
+}
+.number h2 {
+  margin: 8px;
+}
+.number p {
+  font-size: 1.3rem;
+  margin: 0;
+}
+
+.features {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 256px 0 256px 0;
+  gap: 96px;
+}
+
+.feature-descriptions {
+  display: flex;
+  -moz-column-gap: 64px;
+       column-gap: 64px;
+  justify-content: center;
+}
+
+i {
+  margin: auto 0;
+  font-size: 3rem;
+  color: #f50053;
+}
+
+.description-text {
+  display: flex;
+  flex-direction: column;
+}
+.description-text h2,
+.description-text p {
+  margin: 0;
+}
+
+.product-card-stack {
+  display: flex;
+  border-top: 3px solid #920031;
+  padding: 256px 0;
+  margin: 0 auto;
+  max-width: 1200px;
+  justify-content: space-between;
+}
+
+.product-card {
+  outline: 8px solid #f50053;
+  box-shadow: #920031 24px 24px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.product-card h2 {
+  margin: 0px;
+  padding: 0px;
+  background-color: #f50053;
+  color: #fffefe;
+  padding-bottom: 8px;
+}
+.product-card p {
+  padding: 0 16px;
+}
+.product-card ul {
+  list-style: none;
+  line-height: 24px;
+}
+.product-card .price {
+  font-family: "Ubuntu", Sans-Serif;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+}
+.product-card .select-btn {
+  margin: 24px auto 16px auto;
+  background-color: #fffefe;
+  border: 3px solid #920031;
+  color: #920031;
+  border-radius: 8px;
+  padding: 8px 0;
+  font-family: "Ubuntu", Sans-Serif;
+  text-align: center;
+  width: 156px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.product-card .select-btn:hover {
+  border: 3px solid #f50053;
+  color: #fffefe;
+  background-color: #f50053;
+}
+.product-card .select-btn:focus {
+  background-color: #920031;
+  border: 3px solid #920031;
+}
+
+#tetraoffice {
+  outline: 8px solid #2760fd;
+  box-shadow: #0f2460 24px 24px;
+}
+#tetraoffice h2 {
+  background-color: #2760fd;
+  color: #fffefe;
+}
+#tetraoffice .select-btn {
+  border: 3px solid #0f2460;
+  color: #0f2460;
+}
+#tetraoffice .select-btn:hover {
+  border: 3px solid #2760fd;
+  color: #fffefe;
+  background-color: #2760fd;
+}
+#tetraoffice .select-btn:focus {
+  background-color: #0f2460;
+  border: 3px solid #0f2460;
 }/*# sourceMappingURL=main.css.map */
